# yadisk_download

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
web/: Dockerfile  README.md  package-lock.json  package.json
web/public/: index.html
web/src/: App.js  index.js
web/src/components/: IndexPage.jsx  LoginPage.jsx  Navbar.jsx  SignupPage.jsx  Spinner.jsx
web/src/hooks/: index.js
web/src/routes/: routes.js
yadisk_download/: asgi.py  settings.py  urls.py  wsgi.py
yadisk_download/api/: router.py  serializers.py  utils.py  views.py
